force-app/main/default/objects/Student__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory Manager Approved</fullName>
            </value>
            <value>
                <fullName>Zonal Manager Approced</fullName>
            </value>
            <value>
                <fullName>Submited Approval</fullName>
            </value>
            <value>
                <fullName>Finally Approved</fullName>
            </value>
            <value>
                <fullName>Finally Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>