force-app/main/default/objects/Student__c/fields/Communication_Address_del__c.field-meta.xml
<CustomField>
    <fullName>Communication_Address_del__c</fullName>
    <label>Communication Address</label>
    <type>TextArea</type>
</CustomField>