force-app/main/default/objects/Student__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>UNITED STATES OF AMERICA</fullName>
            </value>
            <value>
                <fullName>SRI LANKA</fullName>
            </value>
            <value>
                <fullName>UNITED KINGDOM</fullName>
            </value>
            <value>
                <fullName>PAKISTAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>