force-app/main/default/objects/Student__c/fields/course__c.field-meta.xml
<CustomField>
    <fullName>course__c</fullName>
    <label>course</label>
    <referenceTo>course__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>