force-app/main/default/objects/Student__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Qualified Text</fullName>
            </value>
            <value>
                <fullName>Poor and Qualified</fullName>
            </value>
            <value>
                <fullName>Pandemic Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>