force-app/main/default/objects/Student__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <label>Father Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>