force-app/main/default/objects/Student__c/fields/Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Discount__c</fullName>
    <label>Fee Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>