force-app/main/default/objects/Student__c/fields/How_much_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>How_much_fee_paid__c</fullName>
    <label>How much fee paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>