force-app/main/default/objects/Student__c/fields/is_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>is_fee_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is fee paid</label>
    <type>Checkbox</type>
</CustomField>