force-app/main/default/objects/Student__c/fields/is_poor_student__c.field-meta.xml
<CustomField>
    <fullName>is_poor_student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is poor student?</label>
    <type>Checkbox</type>
</CustomField>