force-app/main/default/objects/Student__c/fields/is_record_is_eligible_for_approval__c.field-meta.xml
<CustomField>
    <fullName>is_record_is_eligible_for_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is record is eligible for approval</label>
    <type>Checkbox</type>
</CustomField>