force-app/main/default/objects/Student__c/fields/Joined_course__c.field-meta.xml
<CustomField>
    <fullName>Joined_course__c</fullName>
    <label>Joined course</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>PYTHON</fullName>
            </value>
            <value>
                <fullName>DATA SCIENCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>