force-app/main/default/objects/Student__c/fields/Student_All_Details__c.field-meta.xml
<CustomField>
    <fullName>Student_All_Details__c</fullName>
    <formula>&apos;Name:&apos;+Name+BR()+
&apos;Father Name:&apos;+Father_Name__c + BR()+
&apos;Roll Number:&apos;+Text(RollNo__c)+BR()+
&apos;Email id:&apos;+ Email_Id__c + BR()+
&apos;Batch:&apos;+Batch__r.Name +BR()+
&apos;Course:&apos;+    course__r.Name+BR()+
&apos;Owner Name:&apos;+  course__r.Owner:User.FirstName + course__r.Owner:User.LastName+ BR()+

&apos;Gender:&apos;+Text( Gender__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student All Details</label>
    <type>Text</type>
</CustomField>