force-app/main/default/objects/Student__c/fields/Total_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_paid__c</fullName>
    <formula>IF( Total_Fee__c  ==  How_much_fee_paid__c , true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount paid?</label>
    <type>Checkbox</type>
</CustomField>