force-app/main/default/objects/Student__c/fields/Year_Discount__c.field-meta.xml
<CustomField>
    <fullName>Year_Discount__c</fullName>
    <formula>IF( Text(Discount_Type__c) == &apos;Poor&apos;,50/100,
   
 IF( Text(Discount_Type__c) == &apos;Qualified Text&apos;,100/100,

 IF(
     OR(Text(Discount_Type__c) == &apos;Poor and Qualified&apos;,Text(Discount_Type__c) == &apos;Pandemic Offer&apos;),30/100,0) 

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>