force-app/main/default/objects/Student__c/recordTypes/India_page_layout.recordType-meta.xml
<RecordType>
    <fullName>India_page_layout</fullName>
    <active>true</active>
    <label>India page layout</label>
</RecordType>