force-app/main/default/objects/Student__c/recordTypes/Japan_Page_Layout.recordType-meta.xml
<RecordType>
    <fullName>Japan_Page_Layout</fullName>
    <active>true</active>
    <label>Japan Page Layout</label>
</RecordType>