force-app/main/default/objects/Student__c/recordTypes/US_Page_layout.recordType-meta.xml
<RecordType>
    <fullName>US_Page_layout</fullName>
    <active>true</active>
    <label>US Page layout</label>
</RecordType>