force-app/main/default/objects/Student__c/validationRules/Country_field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_field_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>If(ISBLANK( Text(Country__c )),true,false)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Please Selcet Country Value</errorMessage>
</ValidationRule>