force-app/main/default/objects/Student__c/validationRules/DOB_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_validation_rule</fullName>
    <active>false</active>
    <errorConditionFormula>IF(DOB__c&gt;TODAY(),true,false)</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>DOB can&apos;t be in future</errorMessage>
</ValidationRule>