force-app/main/default/objects/Student__c/validationRules/is_fee_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>is_fee_paid</fullName>
    <active>false</active>
    <errorConditionFormula>IF( is_fee_paid__c == true,false, true)</errorConditionFormula>
    <errorMessage>ss</errorMessage>
</ValidationRule>