force-app/main/default/objects/Student__c/validationRules/State_field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_field_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>If(ISBLANK( Text( States__c  )),true,false)</errorConditionFormula>
    <errorDisplayField>States__c</errorDisplayField>
    <errorMessage>Please Selcet State Value</errorMessage>
</ValidationRule>