force-app/main/default/objects/Student__c/validationRules/Student_Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Student_Age__c &gt;20</errorConditionFormula>
    <errorDisplayField>Student_Age__c</errorDisplayField>
    <errorMessage>Enter Age 20 and above</errorMessage>
</ValidationRule>