force-app/main/default/objects/Student__c/validationRules/Total_fee_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_fee_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND( course__r.Name==&apos;HTML&apos; ,Total_Fee__c != 25000), true, false)</errorConditionFormula>
    <errorDisplayField>Total_Fee__c</errorDisplayField>
    <errorMessage>for HTML the fee should be  25000</errorMessage>
</ValidationRule>