force-app/main/default/objects/Student__c/listViews/Indian_Students_list.listView-meta.xml
<ListView>
    <fullName>Indian_Students_list</fullName>
    <columns>NAME</columns>
    <columns>Email_Id__c</columns>
    <columns>DOB__c</columns>
    <columns>course__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>INDIA</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student__c.India_page_layout</value>
    </filters>
    <label>Indian Students list</label>
</ListView>