force-app/main/default/objects/Student__c/listViews/USA_View.listView-meta.xml
<ListView>
    <fullName>USA_View</fullName>
    <columns>NAME</columns>
    <columns>Discount_Type__c</columns>
    <columns>DOB__c</columns>
    <columns>Father_Name__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>UNITED STATES OF AMERICA</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student__c.US_Page_layout</value>
    </filters>
    <label>USA View</label>
</ListView>